Adjust executes module path and class path behaviour.